--- a/languages/syngency-en_US.po
+++ b/languages/syngency-en_US.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Syngency WordPress Plugin 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-25 13:09+0100\n"
-"PO-Revision-Date: 2016-04-25 23:31+1200\n"
+"PO-Revision-Date: 2016-04-25 23:40+1200\n"
 "Language-Team: Ryan Marshall <ryan@syngency.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: ../admin/class-syngency-admin.php:59
 msgid "Height"
-msgstr "Height!!!!"
+msgstr "Height"
 
 #: ../admin/class-syngency-admin.php:60
 msgid "Bust"
