--- a/languages/syngency-pt_PT.po
+++ b/languages/syngency-pt_PT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Syngency WordPress Plugin 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-25 13:09+0100\n"
-"PO-Revision-Date: 2016-04-25 23:40+1200\n"
+"PO-Revision-Date: 2016-04-26 12:40+1200\n"
 "Language-Team: Ryan Marshall <ryan@syngency.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11,26 +11,26 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: ..\n"
 "X-Generator: Poedit 1.8.7\n"
-"Last-Translator: \n"
+"Last-Translator: Ryan Marshall <ryan@syngency.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: en_US\n"
+"Language: pt_PT\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: ../public/templates/syngency-division.php:3
 msgid "All"
-msgstr "All"
+msgstr "Todos"
 
 #: ../public/templates/syngency-division.php:6
 msgid "Men"
-msgstr "Men"
+msgstr "Homens"
 
 #: ../public/templates/syngency-division.php:9
 msgid "Women"
-msgstr "Women"
+msgstr "Mulheres"
 
 #: ../admin/class-syngency-admin.php:59
 msgid "Height"
-msgstr "Height"
+msgstr "Altura"
 
 #: ../admin/class-syngency-admin.php:60
 msgid "Bust"
@@ -38,11 +38,11 @@ msgstr "Bust"
 
 #: ../admin/class-syngency-admin.php:61
 msgid "Waist"
-msgstr "Waist"
+msgstr "Cintura"
 
 #: ../admin/class-syngency-admin.php:62
 msgid "Hip"
-msgstr "Hip"
+msgstr "Quadril"
 
 #: ../admin/class-syngency-admin.php:63
 msgid "Dress"
@@ -50,15 +50,15 @@ msgstr "Dress"
 
 #: ../admin/class-syngency-admin.php:64
 msgid "Shoe"
-msgstr "Shoe"
+msgstr "Tenis"
 
 #: ../admin/class-syngency-admin.php:65
 msgid "Hair"
-msgstr "Hair"
+msgstr "Cabelo"
 
 #: ../admin/class-syngency-admin.php:66
 msgid "Eyes"
-msgstr "Eyes"
+msgstr "Olhos"
 
 #: ../admin/class-syngency-admin.php:67
 msgid "Chest"
